[package]
name = "solana-kvstore"
description = "Embedded Key-Value store for solana"
version = "0.15.0"
homepage = "https://solana.com/"
repository = "https://github.com/solana-labs/solana"
authors = ["Solana Maintainers <maintainers@solana.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
byteorder = "1.3.1"
bytes = { version = "0.4.12", features = ["serde"] }
crc = "1.8.1"
evmap = "5.0.2"
serde = "1.0.91"
serde_derive = "1.0.91"
specs = "0.14.3"
specs-derive = "0.4.0"
shred = "0.7.0"
shred-derive = "0.5.0"
actix = "0.8.1"

[dev-dependencies]
tempfile = "3.0.7"
proptest = "0.9.3"
